<resources>
    <string name="app_name">物品记</string>

    <!--    首页-->
    <string name="home_title">我的清单</string>
    <string name="home_edit_hint">  搜索好物</string>
    <string name="day">天</string>
    <string name="overdue">已过期</string>

<!--    add页面-->
    <string name="add_title">新增</string>
    <string name="edit_title">编辑</string>
    <string name="add_remind">提醒我</string>
    <string name="add_input">请输入物品名称</string>
    <string name="add_src_input">插入物品图片</string>

<!--    dialog-->
    <string name="dialog_remind_title">选择提醒时间</string>
    <string name="dialog_datePick_title">生产日期</string>
    <string name="dialog_timeout_title">保质期</string>
    <string name="dialog_noSave_btn">取消</string>
    <string name="dialog_Save_btn">确定</string>

    <string name="dialog_Copy_btn">复制</string>
    <string name="dialog_Editing_btn">编辑</string>
    <string name="dialog_Delete_btn">删除</string>
</resources>