<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/picker_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@android:color/transparent"
            android:textColor="@color/grey"
            android:text="@string/dialog_noSave_btn"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/picker_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_remind_title"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <Button
            android:id="@+id/picker_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@android:color/transparent"
            android:textColor="@color/pink"
            android:text="@string/dialog_Save_btn"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.aigestudio.wheelpicker.WheelPicker
            android:id="@+id/remind_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:wheel_curved="true"
            app:wheel_selected_item_text_color="@color/pink"
            android:layout_below="@id/title"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
