<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="53sp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_Copy_btn"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/bg_grey">
    </View>

    <LinearLayout
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="53sp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_Editing_btn"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/bg_grey">
    </View>

    <LinearLayout
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="53sp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_Delete_btn"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6sp"
        android:background="@color/bg_grey">
    </View>

    <LinearLayout
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="53sp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dialog_noSave_btn"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:gravity="center">
        </TextView>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </View>
    </LinearLayout>
</LinearLayout>
