<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk_white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/milk_white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/no_save_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/no_button" />
            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/add_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <ImageButton
                android:id="@+id/save_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="?attr/selectableItemBackground"
                android:padding="8dp"
                android:src="@drawable/yes_button" />
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_below="@id/home_toolbar">

        <EditText
            android:id="@+id/add_editText"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/add_input"
            android:inputType="text"
            android:paddingStart="15dp"
            android:textColor="@color/grey" />
        <LinearLayout
            android:id="@+id/add_date"
            android:layout_width="320dp"
            android:layout_height="144dp"
            android:background="@drawable/add_background"
            android:layout_marginTop="5dp"
            android:layout_below="@id/add_editText"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/birthDate_ly"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="生产日期"
                    android:paddingLeft="13dp"
                    style="@style/text_grey">
                </TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/birthDate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="13dp"
                    android:text="2023-8-24">
                </TextView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey2" />
            <LinearLayout
                android:id="@+id/timeout_ly"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="有效日期"
                    android:paddingLeft="13dp"
                    style="@style/text_grey">
                </TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/expirationDate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="13dp"
                    android:text="2023-8-24">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_remind_layout"
            android:layout_width="320dp"
            android:layout_height="44dp"
            android:layout_marginTop="28dp"
            android:layout_below="@id/add_date"
            android:layout_centerHorizontal="true"
            android:background="@drawable/add_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/add_remind"
                    android:textSize="15dp"
                    android:textColor="@color/grey"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <Switch
                    android:id="@+id/remind_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/selector_switch_thumb"
                    android:track="@drawable/selector_switch_truck"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/src_linear_layout"
            android:layout_width="320dp"
            android:layout_height="34dp"
            android:layout_marginTop="28dp"
            android:layout_below="@id/add_remind_layout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/add_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/add_src_input"
                    android:textSize="15dp"
                    android:textColor="@color/grey">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>




</FrameLayout>